update symbols and alignment fixes

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,6 +1,6 @@
 @import "mocha.css";
 * {
-  font-family: Symbols Nerd Font, Iosevka Medium, monospace;
+  font-family: Symbols Nerd Font Mono, Iosevka Medium;
   font-size: 15px;
   border: none;
   border-radius: 5px;
